welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: 'case' expected but identifier found.
litMessage() match {droite();avance()}
                    ^BDR2:2: error: '}' expected but ';' found.
litMessage() match {droite();avance()}
                            ^BDR2:3: error: '}' expected but 'case' found.
	case "R" => droite();avancer()
        ^BDR2:4: error: illegal start of definition
  case "L" => gauche();avance()
  ^BDR2:5: error: illegal start of definition
	case "I" => retourne();avance()
        ^BDR2:6: error: illegal start of definition
  case "A" => avance()
  ^BDR2:7: error: illegal start of definition
	case "B" => avance(2)
        ^BDR2:8: error: illegal start of definition
  case "C" => avance(3)
  ^BDR2:9: error: illegal start of definition
  case "D" => avance(4)
  ^BDR2:10: error: illegal start of definition
  case "E" => avance(5)
  ^BDR2:11: error: illegal start of definition
  case "F" => avance(6)
  ^BDR2:12: error: illegal start of definition
	case "Z" => recule()
        ^BDR2:13: error: illegal start of definition
  case "Y" => recule(2)
  ^BDR2:14: error: illegal start of definition
	case "X" => recule(3)
        ^BDR2:15: error: illegal start of definition
  case "W" => recule(4)
  ^BDR2:16: error: illegal start of definition
  case "V" => recule(5)
  ^BDR2:17: error: illegal start of definition
  case "U" => recule(6)
  ^BDR2:20: error: eof expected but '}' found.
	}
        ^